e2e/agic/edgecases/overlappinghealthprobes/input/ingress-1-health-probe.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-probe-ingress-1
  namespace: default
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-hostname: "contoso-1.com"
    appgw.ingress.kubernetes.io/health-probe-interval: "100"
    appgw.ingress.kubernetes.io/health-probe-path: "/health-path-1"
    appgw.ingress.kubernetes.io/health-probe-port: "3001"
    appgw.ingress.kubernetes.io/health-probe-status-codes: "200-299,301"
    appgw.ingress.kubernetes.io/health-probe-timeout: "100"
    appgw.ingress.kubernetes.io/health-probe-unhealthy-threshold: "1"
spec:
  rules:
    - host: health-probe
      http:
        paths:
          - path: /path-1/
            backend:
              service:
                name: contoso-service
                port:
                  number: 80
            pathType: Exact
